# .gn file - GN configuration
# Set the root directory for the build
buildconfig = "//build/BUILDCONFIG.gn"

# Default build arguments
default_args = {
  # Use GCC by default (set to true for Clang)
  use_clang = false
  
  # Enable SSL support
  enable_ssl = true
  
  # Disable testing by default (enable if you have test files)
  enable_testing = false
  
  # Debug build by default
  is_debug = true
  
  # Enable warnings
  enable_warnings = true
  treat_warnings_as_errors = false
}